@startuml

title __LEVEL6_1's Class Diagram__\n

  namespace decoupling.levels.level6_1 {
    interface decoupling.levels.level6_1.Consumer {
        {abstract} + consume()
    }
  }
  

  namespace decoupling.levels.level6_1 {
    class decoupling.levels.level6_1.ConsumerImpl {
        + ConsumerImpl()
        + consume()
    }
  }
  

  namespace decoupling.levels.level6_1 {
    class decoupling.levels.level6_1.Main {
        {static} + main()
    }
  }
  

  decoupling.levels.level6_1.ConsumerImpl .up.|> decoupling.levels.level6_1.Consumer
  decoupling.levels.level6_1.ConsumerImpl o-- decoupling.levels.level6_1.service.ServiceA : serviceA
  decoupling.levels.level6_1.ConsumerImpl o-- decoupling.levels.level6_1.service.ServiceB : serviceB


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
